inc/X11/Xlib.bi


union XIMStatusDrawCallbackStruct__NESTED__data
	text as XIMText ptr
	bitmap as Pixmap
end union

type _XIMHotKeyTrigger
	keysym as KeySym
	modifier as integer
	modifier_mask as integer
end type

type XIMHotKeyTrigger as _XIMHotKeyTrigger

type _XIMHotKeyTriggers
	num_hot_key as integer
	key as XIMHotKeyTrigger ptr
end type

type XIMHotKeyTriggers as _XIMHotKeyTriggers
type XIMHotKeyState as uinteger

#define XIMHotKeyStateON (&h0001L)
#define XIMHotKeyStateOFF (&h0002L)

type XIMValuesList
	count_values as ushort
	supported_values as byte ptr ptr
end type

declare function XQueryFont cdecl alias "XQueryFont" (byval as Display ptr, byval as XID) as XFontStruct ptr
declare function XGetMotionEvents cdecl alias "XGetMotionEvents" (byval as Display ptr, byval as Window, byval as Time, byval as Time, byval as integer ptr) as XTimeCoord ptr
declare function XDeleteModifiermapEntry cdecl alias "XDeleteModifiermapEntry" (byval as XModifierKeymap ptr, byval as KeyCode, byval as integer) as XModifierKeymap ptr
declare function XGetModifierMapping cdecl alias "XGetModifierMapping" (byval as Display ptr) as XModifierKeymap ptr
declare function XInsertModifiermapEntry cdecl alias "XInsertModifiermapEntry" (byval as XModifierKeymap ptr, byval as KeyCode, byval as integer) as XModifierKeymap ptr
declare function XNewModifiermap cdecl alias "XNewModifiermap" (byval as integer) as XModifierKeymap ptr
declare function XCreateImage cdecl alias "XCreateImage" (byval as Display ptr, byval as Visual ptr, byval as uinteger, byval as integer, byval as integer, byval as zstring ptr, byval as uinteger, byval as uinteger, byval as integer, byval as integer) as XImage ptr
declare function XInitImage cdecl alias "XInitImage" (byval as XImage ptr) as integer
declare function XGetImage cdecl alias "XGetImage" (byval as Display ptr, byval as Drawable, byval as integer, byval as integer, byval as uinteger, byval as uinteger, byval as uinteger, byval as integer) as XImage ptr
declare function XGetSubImage cdecl alias "XGetSubImage" (byval as Display ptr, byval as Drawable, byval as integer, byval as integer, byval as uinteger, byval as uinteger, byval as uinteger, byval as integer, byval as XImage ptr, byval as integer, byval as integer) as XImage ptr
declare sub XrmInitialize cdecl alias "XrmInitialize" ()
declare function XFetchBytes cdecl alias "XFetchBytes" (byval as Display ptr, byval as integer ptr) as zstring ptr
declare function XFetchBuffer cdecl alias "XFetchBuffer" (byval as Display ptr, byval as integer ptr, byval as integer) as zstring ptr
declare function XGetAtomName cdecl alias "XGetAtomName" (byval as Display ptr, byval as Atom) as zstring ptr
declare function XGetAtomNames cdecl alias "XGetAtomNames" (byval as Display ptr, byval as Atom ptr, byval as integer, byval as byte ptr ptr) as integer
declare function XKeysymToString cdecl alias "XKeysymToString" (byval as KeySym) as zstring ptr
declare function XSynchronize cdecl alias "XSynchronize" (byval as Display ptr, byval as integer) as integer ptr
declare function XSetAfterFunction cdecl alias "XSetAfterFunction" (byval as Display ptr, byval as function cdecl(byval as Display ptr) as integer) as integer ptr
declare function XInternAtoms cdecl alias "XInternAtoms" (byval as Display ptr, byval as byte ptr ptr, byval as integer, byval as integer, byval as Atom ptr) as integer
declare function XCopyColormapAndFree cdecl alias "XCopyColormapAndFree" (byval as Display ptr, byval as Colormap) as Colormap
declare function XCreateColormap cdecl alias "XCreateColormap" (byval as Display ptr, byval as Window, byval as Visual ptr, byval as integer) as Colormap
declare function XCreatePixmapCursor cdecl alias "XCreatePixmapCursor" (byval as Display ptr, byval as Pixmap, byval as Pixmap, byval as XColor ptr, byval as XColor ptr, byval as uinteger, byval as uinteger) as Cursor
declare function XCreateFontCursor cdecl alias "XCreateFontCursor" (byval as Display ptr, byval as uinteger) as Cursor
declare function XCreateGC cdecl alias "XCreateGC" (byval as Display ptr, byval as Drawable, byval as uinteger, byval as XGCValues ptr) as GC
declare function XGContextFromGC cdecl alias "XGContextFromGC" (byval as GC) as GContext
declare sub XFlushGC cdecl alias "XFlushGC" (byval as Display ptr, byval as GC)
declare function XCreatePixmap cdecl alias "XCreatePixmap" (byval as Display ptr, byval as Drawable, byval as uinteger, byval as uinteger, byval as uinteger) as Pixmap
declare function XCreatePixmapFromBitmapData cdecl alias "XCreatePixmapFromBitmapData" (byval as Display ptr, byval as Drawable, byval as zstring ptr, byval as uinteger, byval as uinteger, byval as uinteger, byval as uinteger, byval as uinteger) as Pixmap
declare function XCreateSimpleWindow cdecl alias "XCreateSimpleWindow" (byval as Display ptr, byval as Window, byval as integer, byval as integer, byval as uinteger, byval as uinteger, byval as uinteger, byval as uinteger, byval as uinteger) as Window
declare function XGetSelectionOwner cdecl alias "XGetSelectionOwner" (byval as Display ptr, byval as Atom) as Window
declare function XCreateWindow cdecl alias "XCreateWindow" (byval as Display ptr, byval as Window, byval as integer, byval as integer, byval as uinteger, byval as uinteger, byval as uinteger, byval as integer, byval as uinteger, byval as Visual ptr, byval as uinteger, byval as XSetWindowAttributes ptr) as Window
declare function XListInstalledColormaps cdecl alias "XListInstalledColormaps" (byval as Display ptr, byval as Window, byval as integer ptr) as Colormap ptr
declare function XGetFontPath cdecl alias "XGetFontPath" (byval as Display ptr, byval as integer ptr) as byte ptr ptr
declare function XListExtensions cdecl alias "XListExtensions" (byval as Display ptr, byval as integer ptr) as byte ptr ptr
declare function XListProperties cdecl alias "XListProperties" (byval as Display ptr, byval as Window, byval as integer ptr) as Atom ptr
declare function XListHosts cdecl alias "XListHosts" (byval as Display ptr, byval as integer ptr, byval as integer ptr) as XHostAddress ptr
declare function XKeycodeToKeysym cdecl alias "XKeycodeToKeysym" (byval as Display ptr, byval as KeyCode, byval as integer) as KeySym
declare function XLookupKeysym cdecl alias "XLookupKeysym" (byval as XKeyEvent ptr, byval as integer) as KeySym
declare function XGetKeyboardMapping cdecl alias "XGetKeyboardMapping" (byval as Display ptr, byval as KeyCode, byval as integer, byval as integer ptr) as KeySym ptr
declare function XMaxRequestSize cdecl alias "XMaxRequestSize" (byval as Display ptr) as integer
declare function XExtendedMaxRequestSize cdecl alias "XExtendedMaxRequestSize" (byval as Display ptr) as integer
declare function XResourceManagerString cdecl alias "XResourceManagerString" (byval as Display ptr) as zstring ptr
declare function XScreenResourceString cdecl alias "XScreenResourceString" (byval as Screen ptr) as zstring ptr
declare function XDisplayMotionBufferSize cdecl alias "XDisplayMotionBufferSize" (byval as Display ptr) as uinteger
declare function XVisualIDFromVisual cdecl alias "XVisualIDFromVisual" (byval as Visual ptr) as VisualID
declare function XInitThreads cdecl alias "XInitThreads" () as integer
declare sub XLockDisplay cdecl alias "XLockDisplay" (byval as Display ptr)
declare sub XUnlockDisplay cdecl alias "XUnlockDisplay" (byval as Display ptr)
declare function XAddExtension cdecl alias "XAddExtension" (byval as Display ptr) as XExtCodes ptr
declare function XFindOnExtensionList cdecl alias "XFindOnExtensionList" (byval as XExtData ptr ptr, byval as integer) as XExtData ptr
declare function XEHeadOfExtensionList cdecl alias "XEHeadOfExtensionList" (byval as XEDataObject) as XExtData ptr ptr
declare function XRootWindow cdecl alias "XRootWindow" (byval as Display ptr, byval as integer) as Window
declare function XDefaultRootWindow cdecl alias "XDefaultRootWindow" (byval as Display ptr) as Window
declare function XRootWindowOfScreen cdecl alias "XRootWindowOfScreen" (byval as Screen ptr) as Window
declare function XDefaultVisual cdecl alias "XDefaultVisual" (byval as Display ptr, byval as integer) as Visual ptr
declare function XDefaultVisualOfScreen cdecl alias "XDefaultVisualOfScreen" (byval as Screen ptr) as Visual ptr
declare function XDefaultGC cdecl alias "XDefaultGC" (byval as Display ptr, byval as integer) as GC
declare function XDefaultGCOfScreen cdecl alias "XDefaultGCOfScreen" (byval as Screen ptr) as GC
declare function XBlackPixel cdecl alias "XBlackPixel" (byval as Display ptr, byval as integer) as uinteger
declare function XWhitePixel cdecl alias "XWhitePixel" (byval as Display ptr, byval as integer) as uinteger
declare function XAllPlanes cdecl alias "XAllPlanes" () as uinteger
declare function XBlackPixelOfScreen cdecl alias "XBlackPixelOfScreen" (byval as Screen ptr) as uinteger
declare function XWhitePixelOfScreen cdecl alias "XWhitePixelOfScreen" (byval as Screen ptr) as uinteger
declare function XNextRequest cdecl alias "XNextRequest" (byval as Display ptr) as uinteger
declare function XLastKnownRequestProcessed cdecl alias "XLastKnownRequestProcessed" (byval as Display ptr) as uinteger
declare function XServerVendor cdecl alias "XServerVendor" (byval as Display ptr) as zstring ptr
declare function XDisplayString cdecl alias "XDisplayString" (byval as Display ptr) as zstring ptr
declare function XDefaultColormap cdecl alias "XDefaultColormap" (byval as Display ptr, byval as integer) as Colormap
declare function XDefaultColormapOfScreen cdecl alias "XDefaultColormapOfScreen" (byval as Screen ptr) as Colormap
declare function XDisplayOfScreen cdecl alias "XDisplayOfScreen" (byval as Screen ptr) as Display ptr
declare function XScreenOfDisplay cdecl alias "XScreenOfDisplay" (byval as Display ptr, byval as integer) as Screen ptr
declare function XDefaultScreenOfDisplay cdecl alias "XDefaultScreenOfDisplay" (byval as Display ptr) as Screen ptr
declare function XEventMaskOfScreen cdecl alias "XEventMaskOfScreen" (byval as Screen ptr) as integer
declare function XScreenNumberOfScreen cdecl alias "XScreenNumberOfScreen" (byval as Screen ptr) as integer

type XErrorHandler as function cdecl(byval as Display ptr, byval as XErrorEvent ptr) as integer

declare function XSetErrorHandler cdecl alias "XSetErrorHandler" (byval as XErrorHandler) as XErrorHandler

type XIOErrorHandler as function cdecl(byval as Display ptr) as integer
